# machine-learning

./: CMakeLists.txt  README.md
src/: data  data2  game.h  main.cpp  network.h  neuron.h
